Better test reporting handling ; maven code cleanup